# serializable

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .pytype.toml  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.lowest.txt  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: manual-release-candidate.yml  python.yml  release.yml
docs/: changelog.rst  conf.py  customising-structure.rst  examples.rst  formatters.rst  getting-started.rst  index.rst  logging.rst  migration.rst  requirements.txt  support.rst
py_serializable/: __init__.py  formatters.py  helpers.py  json.py  xml.py
serializable/: __init__.py  _logging.py  formatters.py  helpers.py  json.py  logging.py  xml.py
tests/: __init__.py  base.py  model.py  test_formatters.py  test_helpers.py  test_json.py  test_oml.py  test_oml_serializable_property.py  test_xml.py
tests/fixtures/: the-phoenix-project-bookedition-none.json  the-phoenix-project-bookedition-none.xml  the-phoenix-project-camel-case-1-v1.xml  the-phoenix-project-camel-case-1-v2.xml  the-phoenix-project-camel-case-1-v3.xml  the-phoenix-project-camel-case-1-v4.xml  the-phoenix-project-camel-case-1.xml  the-phoenix-project-camel-case-references.json  the-phoenix-project-camel-case-v2.json  the-phoenix-project-camel-case-v3.json  the-phoenix-project-camel-case-v4.json  the-phoenix-project-camel-case-with-ignored.json  the-phoenix-project-camel-case-with-ignored.xml  the-phoenix-project-camel-case.json  the-phoenix-project-defaultNS-isset-v4.xml  the-phoenix-project-defaultNS-isset.SNAPSHOT.xml  the-phoenix-project-defaultNS-mixed-v4.xml  the-phoenix-project-defaultNS-unset-v4.xml  the-phoenix-project-defaultNS-unset.SNAPSHOT.xml  the-phoenix-project-defaultNS.xml  the-phoenix-project-kebab-case-1-v2.xml  the-phoenix-project-kebab-case-1.xml  the-phoenix-project-kebab-case.json  the-phoenix-project-no-defaultNS.SNAPSHOT.xml  the-phoenix-project-snake-case-1.xml  the-phoenix-project-snake-case.json  the-phoenix-project-with-defaultNS-v4.xml  the-phoenix-project_unknown_attributes.xml  the-phoenix-project_unknown_elements.xml  the-phoenix-project_unknown_ignored_attributes.xml  the-phoenix-project_unknown_ignored_elements.xml  the-phoenix-project_unknown_ignored_properties.json  the-phoenix-project_unknown_properties.json  the-phoenix-project_unknown_unignored_attributes.xml  the-phoenix-project_unknown_unignored_elements.xml  the-phoenix-project_unknown_unignored_properties.json  the-phoenix-project_unnormalized-input_v4.xml  the-phoenix-project_unnormalized-input_v4__foreign_attributes.xml
