[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "py-serializable"
version = "0.17.0"
description = "Library for serializing and deserializing Python Objects to and from JSON and XML."
authors = ["Paul Horton <paul.horton@owasp.org>"]
maintainers = [
    "Jan Kowalleck <jan.kowalleck@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/madpah/serializable#readme"
repository = "https://github.com/madpah/serializable"
documentation = "https://py-serializable.readthedocs.io/"
packages = [
    { include = "serializable" }
]
classifiers = [
    # Trove classifiers - https://packaging.python.org/specifications/core-metadata/#metadata-classifier
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Topic :: Software Development',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Typing :: Typed'
]
keywords = [
    "serialization", "deserialization", "JSON", "XML"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/madpah/serializable/issues"

[tool.poetry.dependencies]
python = "^3.7"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
typing-extensions = {version = "4.7.1", python = "<3.8"}
tox = "3.28.0"
coverage = "7.2.7"
xmldiff = "2.6.3"
mypy =  [
    {version = "1.7.1", python = ">=3.8"},
    {version = "1.4.1", python = "<3.8"}
]
autopep8 = {version = "2.0.4", python = ">=3.8"}
isort = {version = "5.13.2", python = ">=3.8"}
flake8 = { version="7.0.0", python=">=3.8.1" }
flake8-annotations = { version="3.0.1", python=">=3.8.1" }
flake8-bugbear = { version="23.12.2", python=">=3.8.1" }
flake8-isort = {version = "6.1.1", python = ">=3.8"}
flake8-quotes = {version = "3.3.2", python = ">=3.8"}
flake8-use-fstring = {version = "1.4", python = ">=3.8"}


[tool.semantic_release]
# see https://python-semantic-release.readthedocs.io/en/latest/configuration.html
# currently running in CI: v7.34.6
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = [
    "serializable/__init__.py:__version__",
    "docs/conf.py:release",
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry==1.1.12 && poetry build"